<?xml version="1.0"?>
<package>
  <name>tuto_sphinx_doxygen</name>
  <version>1.0.0</version>
  <description>Tutorial on how to use sphinx with doxygen</description>
  <author email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</author>
  <maintainer email="vincent.berenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>BSD 3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>

  
  <export>
  </export>
</package>
